@@ -8,8 +8,8 @@
 			     drawable
 			     direction
 			     position)
-  (let* ((width (car (gimp-drawable-width drawable)))
-	 (height (car (gimp-drawable-height drawable))))
+  (let* ((width (car (gimp-image-width image)))
+	 (height (car (gimp-image-height image))))
 
     (if (= direction 0) 
 	;; check position is inside the image boundaries
